<resources>
  <string name="app_name">CityElf</string>
  <string name="title_activity_settings">Settings</string>
  <string name="json_test">json_test</string>
  <string name="map_test">map_test</string>
  <string name="action_enter">enter</string>
  <string name="action_osmd">osmd_admin</string>
  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value" />

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
  <string name="msg_token_fmt">InstanceID Token: %s</string>

  <!--Main activity-->
  <string name="main_report_button">Сообщить об отключении</string>

  <!-- Maps activity-->
  <string name="account">Acc</string>
  <string name="title_activity_maps">Map</string>
  <string name="title_activity_map">Map</string>

  <string name="input_adress_onmap">Введите или выберите свой адресс</string>

  <!--Authorization activity-->
  <string name="email">Email</string>
  <string name="login">Войти</string>
  <string name="registerait_user">Зарегистрироваться</string>
  <string name="restore_password">Забыл пароль</string>
  <string name="password">Пароль</string>
  <string name="address">Адрес</string>
  <string name="phone">Телефон</string>
  <string name="register">Зарегистрироваться</string>


  <string name="settings">Settings</string>

  <!-- Dialog fragment-->
  <string name="dialog_header">Выберите коммунальные услуги и адрес</string>
  <string name="dialog_header_unreg">Для отправки отчёта об отключении необходимо авторизироваться</string>
  <string name="dialog_electricity">Отключение электричества</string>
  <string name="dialog_gas">Отключение газа</string>
  <string name="dialog_water">Отключение воды</string>
  <string name="dialog_report">Отправить</string>
  <string name="dialog_login">Логин/Регистрация</string>
  <string name="dialog_register">Регистрация</string>

  <!--Main activity-->
  <string name="poll_button_vote">Проголосовать</string>
  <string name="tab_notifications_title">Уведомления</string>
  <string name="tab_adverts_title">Объявления</string>
  <string name="tab_polls_title">Опросы</string>

  <!-- Settings activity-->

  <string-array name="entries">
    <item>Русский</item>
    <item>Украинский</item>
  </string-array>
  <string-array name="entry_values">
    <item>1</item>
    <item>2</item>
  </string-array>

  <string name="default_email">hil****@gmail.com</string>
  <string name="default_pass">******</string>
  <string name="default_street">Улица Канатная, 22</string>
  <string name="title_activity_first">FirstActivity</string>
  <string name="settings_test">settings_test</string>
  <string name="about_program">  CityElf – это молодая команда разработчиков.\n\n Наша цель – принести пользу Одессе и горожанам.\n
Мы стараемся сделать вашу жизнь комфортнее, и для этого создали сервис CityElf.
Команда регулярно совершенствует веб-сайт и мобильное приложение ради вашего удобства.</string>
  <string name="exit">Выход</string>
  <string name="osmdInfo">Если Вы глава ОСМД, то можете получить дополнительные функции: добавлять объявления, опросы для жильцов дома и следить за их результатами</string>

  <string name="many_address">Дополнительные адреса
    \n       (использовано 0 из 2)</string>
  <string name="inputAddress">Введите адресс</string>
  <string name="check_status">Проверить</string>
  <string name="get_admin_function">Получить функции администратора</string>
  <string name="you_address">Ваш адрес</string>
  <string name="firstLast_name">Ваше ФИО</string>
  <string name="you_document">Добавьте документ, подтверждающий Вашу должность</string>
  <string name="add_document">Добавить документ</string>
  <string name="send_requet">Отправить запрос</string>

  <!-- Advert Admin fragment -->

  <string name="fragment_admin_advert_header">Добавить новое объявление</string>
  <string name="fragment_admin_advert_name">Название</string>
  <string name="fragment_admin_advert_address">Адрес</string>
  <string name="fragment_admin_advert_content">Описание</string>
  <string name="fragment_admin_advert_add_button">Добавить</string>

  <!-- Poll Admin fragment -->

  <string name="fragment_admin_poll_header">Добавить новый опрос</string>
  <string name="fragment_admin_poll_name">Название</string>
  <string name="fragment_admin_poll_address">Адрес</string>
  <string name="fragment_admin_poll_content">Описание</string>
  <string name="fragment_admin_poll_add_button">Добавить</string>
  <string name="fragment_admin_poll_variants">Варианты ответа</string>
  <string name="fragment_admin_poll_add_variant">Добавить вариант ответа</string>
  <string name="fragment_admin_poll_period">Период голосования</string>
  <string name="fragment_admin_poll_start">Начальная дата</string>
  <string name="fragment_admin_poll_finish">Конечная дата</string>

  <string name="google_key">AIzaSyBfHZ2V9nN1sZCnLxrCO6Q7nBJo9seYk10</string>
  <string name="emptyNotification">Новых событий нет</string>
  <string name="password_repeat">Повторите пароль</string>
  <string name="input_new_pass">Введите новый пароль:</string>
  <string name="empty_poll">Новых опросов нет</string>
  <string name="empty_adverts">Новых объявлений нет</string>
  <string name="add_new_address">Введите новый адрес:</string>
  <string name="input_adress_onsetting">Введите свой адрес</string>
  <string name="add_poll">Добавить голосование</string>
  <string name="check_status_address">Проверить отключения</string>
  <string name="settings_profile">Настройки профиля</string>
  <string name="send_password">Отправить пароль</string>


</resources>
