<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="20dp">

  <TextView
    android:id="@+id/textViewDialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/dialog_header"/>

  <RadioButton
    android:id="@+id/radioButtonDialogElectricity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dialog_electricity"
    android:layout_below="@id/textViewDialogTitle"
    />

  <RadioButton
    android:id="@+id/radioButtonDialogGas"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dialog_gas"
    android:layout_below="@id/radioButtonDialogElectricity"/>

  <RadioButton
    android:id="@+id/radioButtonDialogWater"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dialog_water"
    android:layout_below="@+id/radioButtonDialogGas"/>

</RelativeLayout>