<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/head"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    android:layout_marginLeft="15dp"
    android:text="@string/get_admin_function"
    android:textAppearance="@style/TextFontBold" />
  <TextView
    android:id="@+id/youAddress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_alignStart="@+id/head"
    android:layout_below="@+id/head"
    android:text="@string/you_address"
    android:textAppearance="@style/TextFontStandard" />

  <AutoCompleteTextView
    android:id="@+id/addressAdministation"
    android:layout_width="345dp"
    android:layout_height="35dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/youAddress"
    android:paddingLeft="15sp"
    android:background="@drawable/background_authorization_et"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_alignStart="@+id/head"
    android:layout_below="@+id/addressAdministation"
    android:text="@string/firstLast_name"
    android:textAppearance="@style/TextFontStandard" />

  <EditText
    android:id="@+id/fistNameLastName"
    android:layout_width="345dp"
    android:layout_height="35dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/name"
    android:paddingLeft="15sp"
    android:background="@drawable/background_authorization_et"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/administrationDocument"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_alignStart="@+id/head"
    android:layout_below="@+id/fistNameLastName"
    android:text="@string/you_document"
    android:textAppearance="@style/TextFontStandard" />
  <Button
    android:id="@+id/btn_add_document"
    android:layout_width="166dp"
    android:layout_height="30dp"
    android:layout_marginTop="8dp"
    android:layout_alignStart="@+id/administrationDocument"
    android:layout_below="@+id/administrationDocument"
    android:layout_centerVertical="true"
    android:background="@drawable/background_authorization_et"
    android:text="@string/add_document"
    android:textAllCaps="false" />

  <View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="35dp"
    android:layout_below="@+id/btn_add_document"
    android:background="@android:color/darker_gray" />

  <Button
    android:id="@+id/btn_send_request"
    android:layout_width="166dp"
    android:layout_height="30dp"
    android:layout_marginTop="60dp"
    android:layout_alignStart="@+id/administrationDocument"
    android:layout_below="@+id/btn_add_document"
    android:layout_centerVertical="true"
    android:background="@drawable/background_authorization_btn"
    android:text="@string/send_requet"
    android:textAllCaps="false" />
  <TextView
    android:id="@+id/image_name"
    android:layout_width="140dp"
    android:layout_height="55dp"
    android:layout_marginStart="13dp"
    android:layout_marginLeft="8dp"
    android:layout_alignTop="@+id/btn_add_document"
    android:layout_toEndOf="@+id/btn_add_document"
    android:text="" />
  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="44dp"
    android:layout_marginStart="39dp"
    android:layout_alignParentBottom="true"
    android:layout_alignStart="@+id/image_name"
    app:srcCompat="@drawable/background_splash" />
</RelativeLayout>